# embedded-world-scraper

./: .gitignore  README.md  pyproject.toml
src/: browser.py  config.py  exporter.py  loader.py  main.py  models.py  parser.py
