[project]
name = "embedded-world-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "herman_shyrkavets",email = "gsiruovec@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "selenium (>=4.40.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
